<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="5"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/setting"
        android:title="@string/action_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="15"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/send"
        android:title="@string/action_send"
        android:icon="@drawable/ic_baseline_send_24"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/find"
        android:title="@string/action_find"
        android:icon="@drawable/ic_baseline_search_32"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

</menu>