<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bartex.classjobless4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_lessons"
        android:name="com.bartex.classjobless4.ui.dashboard.DashboardFragment"
        android:label="@string/title_lessons"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_homeworks"
        android:name="com.bartex.classjobless4.ui.notifications.NotificationsFragment"
        android:label="@string/title_homeworks"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_liked"
        android:name="com.bartex.classjobless4.ui.liked.LikedFragment"
        android:label="LikedFragment" />
</navigation>