<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDarkBlack"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view_type"
        android:layout_width="2dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTimeType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/iv_time_type"
        app:layout_constraintTop_toTopOf="@+id/view_type" />

    <ImageView
        android:id="@+id/iv_time_type"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/circle"
        app:layout_constraintTop_toTopOf="@+id/view_type"
        app:layout_constraintStart_toStartOf="@+id/view_type"
        app:layout_constraintEnd_toEndOf="@+id/view_type"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorSecondaryBlack"
        app:cardCornerRadius="30dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvTimeType"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeType">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_slasses_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/ib_send_type"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:background="@color/colorSecondaryBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_video_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/video"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_video_type"
                app:layout_constraintEnd_toEndOf="@+id/iv_video_type"
                app:layout_constraintStart_toStartOf="@+id/iv_video_type"
                app:layout_constraintTop_toTopOf="@+id/cl_slasses_type" />

            <ImageView
                android:id="@+id/iv_video_type"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/v2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ib_send_type"
                app:layout_constraintTop_toBottomOf="@+id/tv_video_type" />

            <TextView
                android:id="@+id/tv_teacher_type"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/teacher"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ib_send_type"
                app:layout_constraintStart_toStartOf="@+id/tv_name_type"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_type" />

            <TextView
                android:id="@+id/tv_name_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/his"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_teacher_type"
                app:layout_constraintTop_toTopOf="@+id/iv_round_type" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_video_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="ib_send_type, tv_video_type, iv_video_type" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_round_type"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_name_type"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:src="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>