<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDarkBlack"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view_type_add"
        android:layout_width="2dp"
        android:layout_height="400dp"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:background="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTimeType_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="@dimen/margin16"
        app:layout_constraintStart_toEndOf="@+id/iv_time_type_add"
        app:layout_constraintTop_toTopOf="@+id/view_type_add" />

    <ImageView
        android:id="@+id/iv_time_type_add"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/circle"
        app:layout_constraintTop_toTopOf="@+id/view_type_add"
        app:layout_constraintStart_toStartOf="@+id/view_type_add"
        app:layout_constraintEnd_toEndOf="@+id/view_type_add"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin8"
        android:layout_marginTop="@dimen/margin4"
        android:layout_marginRight="@dimen/margin8"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvTimeType_add"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeType_add"
        app:cardBackgroundColor="@color/colorSecondaryBlack"
        app:cardCornerRadius="30dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_homework_add"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/grad1">

            <TextView
                android:id="@+id/tvLessonHw_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin24"
                android:text="@string/his"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/iv_roundHw_add"
                app:layout_constraintTop_toTopOf="@+id/iv_roundHw_add"
                tools:layout_editor_absoluteY="36dp" />

            <TextView
                android:id="@+id/tv_teacher_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textColor="@color/white"
                android:lines="2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_roundHw_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvLessonHw_add" />

            <TextView
                android:id="@+id/tvHomeworkHw_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin24"
                android:layout_marginEnd="@dimen/margin24"
                android:lines="4"
                android:layout_marginTop="@dimen/margin16"
                android:scaleType="fitCenter"
                android:text="@string/hw"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/iv_roundHw_add"
                app:layout_constraintTop_toBottomOf="@id/iv_roundHw_add" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_roundHw_add"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/margin24"
                android:layout_marginTop="@dimen/margin24"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="72dp"
                tools:src="@tools:sample/avatars" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_imageHw1_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/parchment"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvHomeworkHw_add"
                app:layout_constraintTop_toBottomOf="@+id/tvHomeworkHw_add" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_imageHw2_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin40"
                android:src="@drawable/physics"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvHomeworkHw_add"
                app:layout_constraintTop_toBottomOf="@+id/tvHomeworkHw_add" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>