<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:clipToPadding="false"
    card_view:cardBackgroundColor="@color/colorSecondaryBlack"
    card_view:cardCornerRadius="30dp"
    app:cardElevation="4dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_slasses"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_round"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        app:civ_border_width="1dp"
        app:civ_border_color="#FF000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvLesson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tvTimeLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_time"
        app:layout_constraintTop_toBottomOf="@+id/tvLesson" />

    <TextView
        android:id="@+id/tvLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/his"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/iv_time"
        app:layout_constraintTop_toTopOf="@+id/iv_round" />

    <ImageView
        android:id="@+id/iv_time"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/time_clock2"
        app:layout_constraintEnd_toStartOf="@+id/tvTimeLesson"
        app:layout_constraintBottom_toBottomOf="@+id/tvTimeLesson"
        app:layout_constraintStart_toStartOf="@+id/tvLesson"
        app:layout_constraintTop_toTopOf="@+id/tvTimeLesson" />

    <View
        android:id="@+id/ib_send"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@color/colorSecondaryBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/cl_slasses"
        app:layout_constraintTop_toTopOf="@+id/cl_slasses"/>

    <TextView
        android:id="@+id/tv_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1"
        android:gravity="center_horizontal"
        android:text="@string/video"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/iv_video"
        app:layout_constraintEnd_toEndOf="@+id/iv_video"
        app:layout_constraintStart_toStartOf="@+id/iv_video"
        app:layout_constraintTop_toTopOf="@+id/cl_slasses" />

    <ImageView
        android:id="@+id/iv_video"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/v2"
        app:layout_constraintBottom_toBottomOf="@+id/cl_slasses"
        app:layout_constraintEnd_toEndOf="@+id/cl_slasses"
        app:layout_constraintStart_toStartOf="@+id/ib_send"
        app:layout_constraintTop_toBottomOf="@+id/tv_video" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_video"
        android:visibility="visible"
        app:constraint_referenced_ids=
            "ib_send, tv_video, iv_video"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_classes"
        android:visibility="visible"
        app:constraint_referenced_ids=
            "iv_round, tvLesson, tvTimeLesson,iv_time "
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView >
